feat: Mobile header; Roboto font.

--- a/themes/yeldirium/_config.yml
+++ b/themes/yeldirium/_config.yml
@@ -51,6 +51,8 @@ profile:
       github: yeldiRium
     links:
       github: https://github.com/yeldiRium
+      twitter: https://twitter.com/yeldiRium
+      linkedin: https://www.linkedin.com/in/hannes-leutloff/
 
 rss: /atom.xml
 
