--- a/themes/yeldirium/package.json
+++ b/themes/yeldirium/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.12.0",
+    "hamburgers": "1.1.3",
     "jquery": "3.4.1",
     "normalize-css": "2.3.1"
   },
@@ -12,6 +13,7 @@
     "css-loader": "3.4.0",
     "file-loader": "5.0.2",
     "node-sass": "4.13.0",
+    "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
     "style-loader": "1.1.2",
     "webpack": "4.41.5",
