--- a/_config.yml
+++ b/_config.yml
@@ -3,87 +3,88 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
+## https://hexo.io/docs/configuration#Site
 title: Hannes Leutloff - yeldiRium
-description: ''
+description: 'Personal blog about stuff.'
 keywords:
 author: Hannes Leutloff
 language: en
 timezone: Europe/Berlin
 
 # URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
+## https://hexo.io/docs/configuration#URL
 url: http://localhost:4000
 root: /
 permalink: :year/:month/:day/:title/
-permalink_defaults:
 pretty_urls:
   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
+## https://hexo.io/docs/configuration#Directory
 source_dir: source
 public_dir: public
 tag_dir: tags
-archive_dir: archives
+archive_dir: archive
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+## https://hexo.io/docs/configuration#Writing
+new_post_name: :title.md
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: false
 external_link:
-  enable: true # Open external links in new tab
-  field: site # Apply to the whole site
-  exclude: ''
+  enable: true
+  field: site
+  exclude: []
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
-future: true
+future: false
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
+  enable: false
 
 # Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
+## https://hexo.io/docs/configuration#Home-page-setting
 index_generator:
   path: ''
   per_page: 10
   order_by: -date
+  pagination_dir: page
 
 # Category & Tag
+## https://hexo.io/docs/configuration#Category-amp-Tag
 default_category: uncategorized
 category_map:
 tag_map:
 
-# Metadata elements
-## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
-meta_generator: true
-
 # Date / Time format
+## https://hexo.io/docs/configuration#Date-Time-format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-## Use post's date for updated date unless set in front-matter
 use_date_for_updated: false
 
 # Pagination
-## Set per_page to 0 to disable pagination
+## https://hexo.io/docs/configuration#Pagination
 per_page: 10
 pagination_dir: page
 
 # Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
+## https://hexo.io/docs/configuration#Extensions
 theme: yeldirium
+theme_config:
+deploy:
+meta_generator: true
+
+## Plugins: https://hexo.io/plugins/
+prism_plugin:
+  mode: 'preprocess'
+  theme: 'default'
+  line_number: false
