feat: Style posts and blog index.

--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,10 @@ highlight:
 # Home page setting
 ## https://hexo.io/docs/configuration#Home-page-setting
 index_generator:
-  path: ''
+  path: '/blog'
   per_page: 10
   order_by: -date
-  pagination_dir: page
+  pagination_dir:
 
 # Category & Tag
 ## https://hexo.io/docs/configuration#Category-amp-Tag
@@ -70,11 +70,6 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 use_date_for_updated: false
-
-# Pagination
-## https://hexo.io/docs/configuration#Pagination
-per_page: 10
-pagination_dir: page
 
 # Extensions
 ## https://hexo.io/docs/configuration#Extensions
