--- a/themes/yeldirium/_config.yml
+++ b/themes/yeldirium/_config.yml
@@ -58,8 +58,8 @@ site:
       alwayShow: true
 
 profile:
-  gravatar: hannes.leutloff@yeldirium.de
-  avatar: # Uses gravatar if gravatar is set.
+  gravatar:
+  avatar: /assets/images/hannes-leutloff-2017-128x128.png
   author: Hannes Leutloff
   author_title: Software Engineer
   location: Neu-Isenburg, Germany
