--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -13,7 +13,7 @@ timezone: Europe/Berlin
 
 # URL
 ## https://hexo.io/docs/configuration#URL
-url: https://yeldirium.de
+url: http://localhost:4000
 root: /
 permalink: :year/:month/:day/:title/
 pretty_urls:
