--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Europe/Berlin
 
 # URL
 ## https://hexo.io/docs/configuration#URL
-url: https://yeldirium.de
+url: https://blog-dev.yeldirium.de
 root: /
 permalink: :year/:month/:day/:title/
 pretty_urls:
