feat: Add atom feed.

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -90,3 +90,14 @@ jsonContent:
     paths:
       - meta/imprint.html
       - meta/privacy-policy.html
+## https://github.com/hexojs/hexo-generator-feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content: false
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  autodiscovery: true
