fix: Exclude archive, blog and 404 pages from search.

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -104,6 +104,9 @@ prism_plugin:
 jsonContent:
   ignore:
     paths:
+      - 404.html
+      - archive/
+      - blog/
       - meta/imprint.html
       - meta/privacy-policy.html
 ## https://github.com/hexojs/hexo-generator-feed
