--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "hexo-renderer-marked": "2.0.0",
     "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "1.0.0"
+  },
+  "devDependencies": {
+    "@semantic-release/changelog": "5.0.0",
+    "@semantic-release/exec": "5.0.0",
+    "@semantic-release/git": "9.0.0",
+    "semantic-release": "17.0.1",
+    "semantic-release-docker": "2.2.0"
   }
 }
