--- a/themes/yeldirium/package.json
+++ b/themes/yeldirium/package.json
@@ -11,9 +11,13 @@
   },
   "devDependencies": {
     "css-loader": "3.4.2",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
     "file-loader": "5.0.2",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.13.1",
+    "prettier": "1.19.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "webpack": "4.41.5",
