feat: Rewrite search from scratch; Remove jQuery.

--- a/themes/yeldirium/.eslintrc.json
+++ b/themes/yeldirium/.eslintrc.json
@@ -7,11 +7,10 @@
     "ecmaVersion": 2019,
     "ecmaFeatures": {
       "impliedStrict": true
-    },
-    "sourceType": "module"
+    }
   },
   "env": {
-    "browser": true,
+    "node": true,
     "es2017": true
   }
 }
