--- a/themes/yeldirium/_config.yml
+++ b/themes/yeldirium/_config.yml
@@ -79,3 +79,19 @@ sidebar:
     - archive
     - tagCloud
     - categories
+
+search:
+  resultsPerSection: 5
+  weights:
+    post:
+      title: 3
+      text: 1
+    page:
+      title: 3
+      text: 1
+    category:
+      name: 1
+      slug: 1
+    tag:
+      name: 1
+      slug: 1
