--- a/_config.yml
+++ b/_config.yml
@@ -120,3 +120,6 @@ feed:
   content_limit_delim: ' '
   order_by: -date
   autodiscovery: true
+## https://github.com/hexojs/hexo-generator-sitemap
+sitemap:
+  path: sitemap.xml
