--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-feed": "2.2.0",
     "hexo-generator-index": "1.0.0",
     "hexo-generator-json-content": "4.1.6",
+    "hexo-generator-sitemap": "2.0.0",
     "hexo-generator-tag": "1.0.0",
     "hexo-prism-plugin": "2.3.0",
     "hexo-renderer-ejs": "1.0.0",
