--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,11 @@ relative_link: false
 future: false
 highlight:
   enable: false
+prismjs:
+  enable: true
+  preprocess: true
+  line_number: true
+  tab_replace: ''
 
 # Home page setting
 ## https://hexo.io/docs/configuration#Home-page-setting
@@ -69,7 +74,7 @@ tag_map:
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-use_date_for_updated: false
+updated_option: date
 
 # Extensions
 ## https://hexo.io/docs/configuration#Extensions
@@ -95,11 +100,6 @@ tag_generator:
 category_generator:
   per_page: 10
   order_by: -date
-## https://github.com/ele828/hexo-prism-plugin
-prism_plugin:
-  mode: 'preprocess'
-  theme: 'default'
-  line_number: false
 ## https://github.com/alexbruno/hexo-generator-json-content
 jsonContent:
   ignore:
