--- a/themes/yeldirium/package.json
+++ b/themes/yeldirium/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.13.1",
+    "@fortawesome/fontawesome-free": "5.14.0",
     "hamburgers": "1.1.3",
-    "normalize-css": "2.3.1"
+    "normalize-css": "2.3.1",
+    "prismjs": "1.20.0"
   },
   "devDependencies": {
-    "css-loader": "3.6.0",
-    "eslint": "7.4.0",
+    "css-loader": "4.2.0",
+    "eslint": "7.5.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "file-loader": "6.0.0",
@@ -19,7 +20,7 @@
     "prettier": "2.0.5",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "9.0.2",
-    "webpack": "4.43.0",
+    "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
   }
 }
