fix: Fix docker registry url again.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,20 +1,20 @@
 {
   "verifyConditions": {
     "path": "semantic-release-docker",
-    "registryUrl": "nexus.yeldirium.de:443"
+    "registryUrl": "nexus-docker.yeldirium.de:443"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "docker build -t nexus.yeldirium.de:443/yeldir/yeldirs-blog ."
+        "prepareCmd": "docker build -t nexus-docker.yeldirium.de:443/yeldir/yeldirs-blog ."
       }
     ],
     [
       "semantic-release-docker",
       {
-        "name": "nexus.yeldirium.de:443/yeldir/yeldirs-blog"
+        "name": "nexus-docker.yeldirium.de:443/yeldir/yeldirs-blog"
       }
     ]
   ]
