--- a/themes/yeldirium/_config.yml
+++ b/themes/yeldirium/_config.yml
@@ -70,6 +70,7 @@ profile:
       github: https://github.com/yeldiRium
       twitter: https://twitter.com/yeldiRium
       linkedin: https://www.linkedin.com/in/hannes-leutloff/
+      mastodon: https://mastodon.yeldirium.de/@yeldiR
 
 sidebar:
   enabled: true
