--- a/themes/yeldirium/package.json
+++ b/themes/yeldirium/package.json
@@ -7,7 +7,9 @@
     "@fortawesome/fontawesome-free": "5.14.0",
     "hamburgers": "1.1.3",
     "normalize-css": "2.3.1",
-    "prismjs": "1.20.0"
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "prismjs": "1.20.0",
+    "terser-webpack-plugin": "4.1.0"
   },
   "devDependencies": {
     "css-loader": "4.2.0",
